testdata/baselines/reference/submodule/compiler/jsEnumTagOnObjectFrozen.errors.txt
index.js(7,1): error TS2304: Cannot find name 'exports'.
index.js(10,12): error TS2749: 'Thing' refers to a value, but is being used as a type here. Did you mean 'typeof Thing'?
index.js(14,1): error TS2304: Cannot find name 'exports'.
index.js(17,16): error TS2749: 'Thing' refers to a value, but is being used as a type here. Did you mean 'typeof Thing'?
index.js(21,1): error TS2304: Cannot find name 'exports'.


==== usage.js (0 errors) ====
    const { Thing, useThing, cbThing } = require("./index");
    
    useThing(Thing.a);
    
    /**
     * @typedef {Object} LogEntry
     * @property {string} type
     * @property {number} time
     */
    
    cbThing(type => {
        /** @type {LogEntry} */
        const logEntry = {
            time: Date.now(),
            type,
        };
    });
    
==== index.js (5 errors) ====
    /** @enum {string} */
    const Thing = Object.freeze({
        a: "thing",
        b: "chill"
    });
    
    exports.Thing = Thing;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
    /**
     * @param {Thing} x
               ~~~~~
!!! error TS2749: 'Thing' refers to a value, but is being used as a type here. Did you mean 'typeof Thing'?
     */
    function useThing(x) {}
    
    exports.useThing = useThing;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
    /**
     * @param {(x: Thing) => void} x
                   ~~~~~
!!! error TS2749: 'Thing' refers to a value, but is being used as a type here. Did you mean 'typeof Thing'?
     */
    function cbThing(x) {}
    
    exports.cbThing = cbThing;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    